Perfil e Receitas Salvas

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,6 @@
 <ion-menu [content]="content">
   <ion-header>
+      <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <ion-toolbar>
       <ion-title>Menu</ion-title>
     </ion-toolbar>
