--- a/src/pages/receitas/receitas.scss
+++ b/src/pages/receitas/receitas.scss
@@ -8,7 +8,7 @@ page-receitas {
       border-radius: 5px;
   }
   
-  .ion-ios-star:before{
+  .ion-ios-star{
       color: gold;
       padding: 0px;
   }
