--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -29,6 +29,21 @@
     font-family: 'Montserrat', sans-serif;
 }
 
-.button-iner{
+.back.bar-button-menutoggle{
+    color: white;
+}
+.back-button-text{
+    color: white;
+}
+.back-button-text-ios{
+    color: white;
+}
+.bar-button-menutoggle {
+    color: white;
+} 
+.bar-button-menutoggle-ios {
+    color: white;
+}
+.show-back-button {
     color: white;
 }
