--- a/src/pages/receitas/receitas.scss
+++ b/src/pages/receitas/receitas.scss
@@ -13,6 +13,11 @@ page-receitas {
       padding: 0px;
   }
   
+  .ion-ios-heart-outline{
+    color: rgb(255, 0, 0);
+    padding: 0px 30px;
+  }
+
   ion-item{
       margin: 0;
       padding-top: 5px;
