--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,20 +1,21 @@
 <ion-menu [content]="content">
-  <ion-header>
-      <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <ion-header class="headerhome">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <ion-toolbar>
       <ion-title>Menu</ion-title>
     </ion-toolbar>
   </ion-header>
 
+
   <ion-content>
     <ion-list>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
-        {{p.title}}
-      </button>
+      <button menuClose ion-item *ngFor="let page of pages" (click)="openPage(page)">
+        {{page.title}}
+      </button> 
     </ion-list>
   </ion-content>
-
 </ion-menu>
+
 
 <!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
 <ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
